@startuml

' --- Estilos ---
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

' --- Enums ---
enum StatusProcesso {
    ABERTO
    PENDENTE
    REPROVADO
    CONCLUIDO
    CANCELADO
}

enum StatusContrato {
    PENDENTE
    EM_ANALISE_SECRETARIA
    APROVADO
    REPROVADO
}

enum StatusRelatorio {
    PENDENTE
    EM_ANALISE_COORDENACAO
    APROVADO
    REPROVADO
}

enum Veredito {
    APROVADO
    REPROVADO
}

enum Turno {
    MANHA
    TARDE
    NOITE
}

enum DiasDaSemana {
    SEGUNDA
    TERCA
    QUARTA
    QUINTA
    SEXTA
    SABADO
}

' --- Classes de Processo e Documentação ---
class Processo {
    - id : int
    - nome_empresa : string
    - data_criacao : Date
    - status : StatusProcesso
    - aluno : FK<Aluno>
    - coordenacao : FK<Coordenador>
    - secretaria : FK<Secretaria>
    - criado_por : string
    + nome_processo() : string
}

class Contrato {
    - id : int
    - arquivo : string
    - data_upload : Date
    - cnpj_empresa : string
    - nome_empresa : string
    - data_inicio : Date
    - data_termino : Date
    - apolice_seguro : string
    - plano_atividade : bool
    - horarios_atividade : M2M<Horarios>
    - assinatura_aluno : bool
    - assinatura_empresa : bool
    - assinatura_faculdade : bool
    - processoId : FK<Processo>
    - status : StatusContrato
    + nome_contrato() : string
}

class Relatorio {
    - id : int
    - processo_id : FK<Processo>
    - arquivo : string
    - data_upload : Date
    - horas_trabalhadas : int
    - data_inicio : Date
    - data_termino : Date
    - status : StatusRelatorio
}

abstract class HistoricoAvaliacao {
    - id : int
    - observacoes : string
    - data_avaliacao : Date
    - veredito : Veredito
}

class HistoricoAvaliacaoRelatorio extends HistoricoAvaliacao {
    - avaliador : FK<Coordenador>
    - relatorio_id : FK<Relatorio>
}

class HistoricoAvaliacaoContrato extends HistoricoAvaliacao {
    - avaliador : FK<Secretaria>
    - contrato_id : FK<Contrato>
    - justificativa : string
}

class Horarios {
    - id : int
    - turno : Turno
    - dia : DiasDaSemana
}

' --- Relacionamentos de Processo ---
Processo "1" *-- "1..*" Contrato : contém >
Processo "1" *-- "0..*" Relatorio : contém >
Processo "0..*" -- "1" StatusProcesso : possui >

Contrato "0..*" -- "0..*" Horarios : horarios_atividade >

Relatorio "1" -- "0..1" HistoricoAvaliacaoRelatorio : possui >
Contrato "1" -- "0..1" HistoricoAvaliacaoContrato : possui >

@enduml
